--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -55,7 +55,7 @@ button{
     background-color: #1F2227;
     border-radius: 3rem;
     .smallBall{
-        width: 1.3rem;
+        width: 1.2rem;
         height: 1.3rem;
         border-radius: 50%;
         background-color: #7478FE;
@@ -83,4 +83,9 @@ p{
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    opacity: 0.7;
+}
+
+a{
+    text-decoration: none;
 }
