--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -199,19 +199,219 @@ header{
     background-size: cover;
     position: relative;
     .container{
+        padding-top: 8rem;
+        .tag{
+            max-width: 12rem;
+            background-color: #CACAF6;
+            margin-bottom: 4rem;
+            span{
+                color: #1F2227;
+            }
+        }
+        h2{
+            max-width: 35rem;
+            margin-bottom: 3.2rem;
 
+            color: #CACAF6;
+            font-size: 4.8rem;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+        }
+        p{
+            color: #CACAF6;
+            font-size: 1.6rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+
+            max-width: 44.2rem;
+            margin-bottom: 4rem;
+        }
     }
 }
 
 .s-four{
-    height: 120rem;
+    
     background-color: #CACAF6;
     .container{
-
+        padding-top: 8rem;  
+        padding-bottom: 16rem;
+        .top{
+            display: flex;
+            align-items: end;
+            justify-content: space-between;
+            .left{
+                .tag{
+                    max-width: 9.4rem;
+                    background-color: #7478FE;
+                    .smallBall{
+                        background-color: #CACAF6;
+                    }
+                }
+                h2{
+                    margin-top: 4rem;
+                    margin-bottom: 3.2rem;
+                    max-width: 61.3rem;
+                    color: #7478FE;
+                }
+                p{
+                    max-width: 68rem;
+                }
+            }
+            .right{
+                
+                a{
+                    display: flex;
+                    align-items: center;
+                    gap: 1.2rem;
+                    color: #7478FE;
+                }
+            }
+        }
+        .slide{
+            margin-top: 5.2rem;
+            margin-bottom: 3.6rem;
+            .swiper{
+                .swiper-wrapper{
+                    .swiper-slide{
+                        .card{
+                            position: relative;
+                            max-width: 24rem;
+                            overflow: hidden;
+                            border-radius: 1rem 1rem 0rem 0rem;
+                            img{
+                                cursor: pointer;
+                                filter: blur(0.1rem);
+                                transition: all 0.3s ease;
+                            }
+                            .text{
+                                position: absolute;
+                                bottom: 11.2rem;
+                                left: 2.8rem;
+                                color: #E8E8FF;
+                                width: 19.2rem;
+                                h3{
+                                    font-size: 2.4rem;
+                                    font-style: normal;
+                                    font-weight: 700;
+                                    line-height: normal;
+                                }
+                                span{
+                                    
+                                    font-size: 1.2rem;
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    line-height: normal;
+                                }
+                            }
+                            a{
+                                position: relative;
+                                z-index: 1;
+                                margin-top: -0.8rem;
+                                max-width: 24rem;
+                                height: 8rem;
+                                border-radius: 0rem 0rem 1rem 1rem;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                background-color: #E8E8FF;
+                                transition: all 0.4s ease;
+                                &:hover{
+                                    &:hover{
+                                        background-color: #7478FE;
+                                        span{
+                                            color: #E8E8FF;
+                                        }
+                                    }
+                                }
+                                span{
+                                    font-family: 'Lexend Exa', sans-serif;
+                                    font-size: 1.6rem;
+                                    font-style: normal;
+                                    font-weight: 500;
+                                    line-height: normal;
+                                    opacity: 0.7;
+                                    color: #7478FE;
+                                    transition: all 0.2s ease;
+                                }
+                            }
+                            &:hover{
+                                img{
+                                 filter: blur(0);
+                                 scale: 108%;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .bot{
+            .ctrl {
+                display: flex;
+                justify-content: space-between;
+                .swiper-pagination {
+                  position: relative;
+                  bottom: 0;
+                  width: auto;
+                  &-bullet {
+                    background-color: #989898;
+                    opacity: 0.5;
+                    transition: all 0.3s ease;
+                    &-active {
+                      opacity: 1;
+                      background-color: #7478FE;
+                      transform: scale(1.3);
+                    }
+                  }
+                }
+        }
+        .swipe{
+            display: flex;
+            align-items: center;
+            gap: 1.2rem;
+        }
     }
+}
 }
 
 footer{
     height: 10rem;
     background-color: #1F2227;
+    display: flex;
+    align-items: center;
+    
+    .container{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        ul{
+            display: flex;
+            gap: 3.6rem;
+            li{
+                
+                font-size: 1.6rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: normal;
+                a{
+                    text-decoration: none;
+                    color: #CACAF6;
+                    transition: all .5s ease;
+                    &:hover{
+                        color: #7478FE;
+                    }
+                }
+            }
+        }
+        p{
+            color: #CACAF6;
+            font-size: 1.6rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+        }
+    }
+    
 }
