--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -37,15 +37,14 @@ header{
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                width: 14rem;
+                max-width: 12rem;
                 height: 4.2rem;
                 gap: .8rem;
                 background-color: #CACAF6;
-                padding: 0.8rem 2rem;
                 border-radius: .5rem;
                 transition: all 0.3s ease;
                 span{
-                    color: #1F2227;
+                    color: #7478FE;
                     font-size: 1.3267rem;
                     font-style: normal;
                     font-weight: 500;
@@ -57,7 +56,7 @@ header{
                         content: '';
                         width: .05rem;
                         height: 4.3rem;
-                        background: #1F2227;
+                        background: #7478FE;
                         display: flex;
                         margin-right: .8rem;
                         transition: all 0.3s ease;
